QCHubPackage/main/default/objects/QC_Interview__c/QC_Interview__c.object-meta.xml
<CustomObject>
    <label>QC Interview</label>
    <nameField>
        <label>QC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QC Interviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>