QCHubPackage/main/default/objects/QC_Interview__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The hero this QC Interview was for.</description>
    <inlineHelpText>The hero this QC Interview was for.</inlineHelpText>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>QC Interviews can only be associated with a &quot;hero&quot;-type account.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Hero</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>QC Interviews</relationshipLabel>
    <relationshipName>QC_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>