QCHubPackage/main/default/objects/QC_Interview__c/fields/Cohort__c.field-meta.xml
<CustomField>
    <fullName>Cohort__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The cohort for which this interview was conducted (individual hero).</description>
    <inlineHelpText>The cohort that the hero this interview is conducted with belongs to.</inlineHelpText>
    <label>Cohort</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>QC Interviews</relationshipLabel>
    <relationshipName>QC_Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>