QCHubPackage/main/default/objects/QC_Interview__c/fields/Finalized__c.field-meta.xml
<CustomField>
    <fullName>Finalized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not this interview has been finalized; determines whether or not it shows up in statistics and analytics.</description>
    <inlineHelpText>Whether or not this interview has been finalized.</inlineHelpText>
    <label>Finalized</label>
    <type>Checkbox</type>
</CustomField>