QCHubPackage/main/default/objects/QC_Interview__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <description>The week for which this interview is conducted.</description>
    <inlineHelpText>The week for which the interview is conducted.</inlineHelpText>
    <label>Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Week_Picklist</valueSetName>
    </valueSet>
</CustomField>